--- a/v2/conf/app.conf
+++ b/v2/conf/app.conf
@@ -1,13 +1,13 @@
-appname = 北京飘漂
+appname = 北飘漂
 httpport = 8888
-#  localhost:27017 10.1.5.36:27017  
-dbconn = mongodb://Jayden:zmlv1314@ds045107.mongolab.com:45107/messageblog
+# 
+dbconn = localhost:27017
 logfile = logs/logs.log
-username = <<zhaomeng.tc>>
-password = <<zm741927>>
+username = admin
+password = 123456
 sitebase = localhost
 siteurl = http://localhost:8888
-#  http://messagedream.u.qiniudn.com
+# 
 staticurl = http://localhost:8888
 themename = bliss
 pagecount = 5
@@ -15,5 +15,5 @@ maxprocs = 4
 runmode ="dev"
 autorender = true
 sessiongcmaxlifetime = 7200
-qiniuaccesskey = n3v8Bnu2RUbladWNInKw6xOHE7RhsxrxIDk2ZC5J
-qiniusecretkey = NoShe9siEKXaGsKuV9hBcfYCReo8rrgnLUvgtkRr
+qiniuaccesskey = 
+qiniusecretkey = 
