--- a/v2/conf/app.conf
+++ b/v2/conf/app.conf
@@ -5,6 +5,9 @@ dbconn = localhost:27017
 logfile = logs/logs.log
 username = admin
 password = 123456
+emailserver = smtp.163.com:25
+emailsender =admin@163.com
+emailpwd = admin
 sitebase = localhost
 siteurl = http://localhost:8888
 # 
